game detail scaffolding

--- a/src/app/pages/companies/company-detail/company-detail.page.html
+++ b/src/app/pages/companies/company-detail/company-detail.page.html
@@ -1,15 +1,13 @@
 <div>
     <div class="header-container">
-        <div class="header">
+        <div class="common-header">
             <div class="side left-info">
                 <div class="titles-container">
                     <div class="title">Sega Corporation</div>
                     <div class="aka-title">Nombres previos: Segata</div>
                 </div>
                 <div class="related-game">Pertenece a <a [routerLink]="'/games'">Nintendo</a></div>
-                <mat-chip-listbox aria-label="Fish selection">
-                    <mat-chip [routerLink]="'/franchises/10'">Sonic the Hedgehog</mat-chip>
-                </mat-chip-listbox>
+                <span class="fi fi-gr"></span> <span class="fi fi-gr fis"></span>
             </div>
             <div class="side right-info">
                 <div class="logo-container">
@@ -19,7 +17,7 @@
         </div>
     </div>
 
-    <div class="content">
+    <div class="common-content">
         COMPA detail
     </div>
 </div>
