--- a/src/app/pages/games/game-detail/game-detail.page.html
+++ b/src/app/pages/games/game-detail/game-detail.page.html
@@ -1,13 +1,13 @@
 <div>
     <div class="header-container">
-        <div class="header">
+        <div class="common-header">
             <div class="side left-info">
                 <div class="titles-container">
                     <div class="title">Sonic the Hedgehog</div>
                     <div class="aka-title">AKA: Sonico Huchi (JAP)</div>
                 </div>
                 <div class="related-game">Remaster de <a [routerLink]="'/games'">Sonic: tu juego favorito</a></div>
-                <mat-chip-listbox aria-label="Fish selection">
+                <mat-chip-listbox aria-label="Games info">
                     <mat-chip [routerLink]="'/franchises/10'">Sonic the Hedgehog</mat-chip>
                     <mat-chip>Plataformas</mat-chip>
                     <mat-chip>Plataformas 3D</mat-chip>
@@ -16,13 +16,93 @@
             </div>
             <div class="side right-info">
                 <div class="logo-container">
-                    <img class="logo" src="http://localhost:3000/images/games/sonic/sonic_the_hedgehog/logo.png">
+                    <img class="logo" src="http://localhost:3000/images/games/sonic/sonic_the_hedgehog/logo.png"/>
                 </div>
             </div>
         </div>
     </div>
+    <div class="platforms-container">
+        <div class="platforms-area">
+            <div class="platform-tag megadrive" matTooltip="Mega Drive" [routerLink]="'/platforms/10'">
+                <img class="platform-mini-logo" src="http://localhost:3000/images/platforms/sega/megadrive/mini-logo.png"/>
+            </div>
+            <div class="platform-tag megadrive" matTooltip="Super Nintendo" [routerLink]="'/platforms/10'">
+                <img class="platform-mini-logo" src="http://localhost:3000/images/platforms/nintendo/snes/mini-logo.png"/>
+            </div>
+            <div class="platform-tag nes" matTooltip="Nintendo Entertainment System" [routerLink]="'/platforms/10'">
+                <img class="platform-mini-logo" src="http://localhost:3000/images/platforms/nintendo/nes/mini-logo.png"/>
+            </div>
+            <div class="platform-tag nes" matTooltip="Master System" [routerLink]="'/platforms/10'">
+                <img class="platform-mini-logo" src="http://localhost:3000/images/platforms/sega/master_system/mini-logo.png"/>
+            </div>
+        </div>
+    </div>
 
-    <div class="content">
-        GAME detail
+    <div class="common-content">
+        <div class="main-game">
+            <div class="game-data">
+                <div class="cover-container">
+                    <img class="cover-img" *ngIf="cover" src="http://localhost:3000/images/games/sonic/sonic_the_hedgehog/cover.jpeg"/>
+                    <img class="cover-img" *ngIf="!cover" src="http://localhost:3000/images/games/sonic/sonic_the_hedgehog/back.jpg"/>
+                    <mat-button-toggle-group class="cover-selector" name="coverSelected" aria-label="coverSelected" [(ngModel)]="cover">
+                        <mat-button-toggle [value]="true">Front</mat-button-toggle>
+                        <mat-button-toggle [value]="false">Back</mat-button-toggle>
+                    </mat-button-toggle-group>
+                </div>
+                <div class="game-info">
+                    <div class="info-entry">
+                        <div class="label-info">Release Date:</div>
+                        <div class="value-info">23/10/1991</div>
+                    </div>
+                    <div class="info-entry">
+                        <div class="label-info">Developer:</div>
+                        <div class="value-info"><a [routerLink]="['/companies', 10]">Sonic Team</a></div>
+                    </div>
+                    <div class="info-entry">
+                        <div class="label-info">Distributor:</div>
+                        <div class="value-info"><a [routerLink]="['/companies', 10]">Sega Corporation</a></div>
+                    </div>
+                    <div class="info-entry">
+                        <div class="label-info">Director:</div>
+                        <div class="value-info"><a [routerLink]="['/persons', 10]">Yuji Naka</a></div>
+                    </div>
+                    <div class="info-entry">
+                        <div class="label-info">Num. Players:</div>
+                        <div class="value-info">1</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="game-additional">
+                <div class="main-row">
+                    <div class="score">94</div>
+                    <div class="award-color" matTooltip="GOTY winner">
+                        <div class="award-background">
+                            <img class="award-logo" src="../../../../assets/icons/game_awards.png"/>
+                        </div>
+                    </div>
+                    <div class="award-color" matTooltip="Golden Joystick Award winner">
+                        <div class="award-background">
+                            <img class="award-logo" src="../../../../assets/icons/Golden_Joystick_Award.png"/>
+                        </div>
+                    </div>
+                    <div class="award-color" matTooltip="Spike VGA winner">
+                        <div class="award-background">
+                            <img class="award-logo" src="../../../../assets/icons/Spike_VGA.png"/>
+                        </div>
+                    </div>
+                </div>
+                <div class="game-status">
+                    <div class="game-personal">
+                    </div>
+                </div>
+                <div class="game-price-row">
+                    <div class="game-price-container">
+                        <div class="game-price-value">30 €</div>
+                        <div class="game-price-format">PAL ES</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
