--- a/src/app/pages/persons/person-detail/person-detail.page.html
+++ b/src/app/pages/persons/person-detail/person-detail.page.html
@@ -1,6 +1,6 @@
 <div>
     <div class="header-container">
-        <div class="header">
+        <div class="common-header">
             <div class="side left-info">
                 <div class="titles-container">
                     <div class="title">Sonic the Hedgehog</div>
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <div class="content">
+    <div class="common-content">
         person detail
     </div>
 </div>
