--- a/src/app/pages/platforms/platform-detail/platform-detail.page.html
+++ b/src/app/pages/platforms/platform-detail/platform-detail.page.html
@@ -1,6 +1,6 @@
 <div>
     <div class="header-container">
-        <div class="header">
+        <div class="common-header">
             <div class="side left-info">
                 <div class="titles-container">
                     <div class="title">Mega Drive</div>
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <div class="content">
+    <div class="common-content">
         PLATF detail
     </div>
 </div>
