--- a/src/app/pages/games/game-detail/game-detail.page.html
+++ b/src/app/pages/games/game-detail/game-detail.page.html
@@ -52,6 +52,7 @@
                 <div class="game-info">
                     <div class="info-entry">
                         <div class="label-info">Release Date:</div>
+                        <!--{{company.founding_date | date: 'dd/MM/yyyy'}}-->
                         <div class="value-info">23/10/1991</div>
                     </div>
                     <div class="info-entry">
