--- a/src/app/pages/platforms/platforms.page.html
+++ b/src/app/pages/platforms/platforms.page.html
@@ -1,4 +1,16 @@
 <div>
     platforms!!!
-    <a [routerLink]="['/platforms', 10]">click</a>
+    <div *ngIf="platforms.length">
+        <mat-grid-list cols="3" rowHeight="2:1" gutterSize="12">
+            <mat-grid-tile *ngFor="let platform of platforms" [routerLink]="['/platforms', platform.id]">
+                <div class="logo-container">
+                    <img class="logo" [src]="'http://localhost:3000/images/platforms/'+platform.logo">
+                </div>
+                <mat-grid-tile-footer><a >{{platform.name}}</a></mat-grid-tile-footer>
+            </mat-grid-tile>
+        </mat-grid-list>
+    </div>
+    <div class="info-entry">
+        <button (click)="create()">creta</button>
+    </div>
 </div>
