people models and services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,9 +27,9 @@
           <mat-icon>voicemail</mat-icon>
           <span>Platforms</span>
         </button>
-        <button mat-menu-item routerLink="/persons">
+        <button mat-menu-item routerLink="/people">
           <mat-icon>dialpad</mat-icon>
-          <span>Persons</span>
+          <span>People</span>
         </button>
       </mat-menu>
       <span class="spacer"></span>
