--- a/src/app/pages/companies/companies.page.html
+++ b/src/app/pages/companies/companies.page.html
@@ -2,14 +2,9 @@
 <div class="common-content">
     companies!!!
     <div *ngIf="companies.length">
-        <mat-grid-list cols="3" rowHeight="2:1" gutterSize="12">
-            <mat-grid-tile *ngFor="let company of companies" [routerLink]="['/companies', company.id]">
-                <div class="logo-container">
-                    <img class="logo" [src]="'http://localhost:3000/images/companies/'+company.logo">
-                </div>
-                <mat-grid-tile-footer><a >{{company.name}}</a></mat-grid-tile-footer>
-            </mat-grid-tile>
-        </mat-grid-list>
+        <vgdb-items-list [itemsList]="companies"
+                          navigateTo="companies" imgPath="companies">
+        </vgdb-items-list>
     </div>
 
     <div class="info-entry">
