--- a/src/app/pages/platforms/platform-detail/platform-detail.page.html
+++ b/src/app/pages/platforms/platform-detail/platform-detail.page.html
@@ -12,7 +12,7 @@
             </div>
             <div class="side right-info">
                 <div class="logo-container">
-                    <img class="logo" [src]="'http://localhost:3000/images/platforms/'+platform.logo">
+                    <img class="logo" [src]="'http://localhost:3000/images/platforms/'+platform.main_img">
                 </div>
             </div>
         </div>
