--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,4 +82,11 @@ body {
         padding: 10px 20px;
     }
 
+    .info-entry {
+        margin-bottom: 10px;
+        .label-info {
+            font-weight: bold;
+        }
+    }
+
 }
